<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">cycleStats</string>
    <string name="edit_message">Enter a Message</string>
    <string name="send_button">Send</string>
    <string name="speed_title">Speed</string>
    <string name="cadence_title">Cadence</string>
    <string name="power_title">Power</string>
    <string name="hr_title">HR</string>
    <string name="start_button">Start Workout</string>
    <string name="stop_button">Stop</string>
    <string name="formula_button">Power Curve</string>
    <string name="chronometer_initial_format"><xliff:g id="initial-format">%s</xliff:g></string>

</resources>
